--- a/styles.css
+++ b/styles.css
@@ -365,6 +365,7 @@ a:hover {
 
 .section-image {
 	max-width: 100%;
+	width: 100%;
 	height: auto;
 	border-radius: var(--border-radius);
 	margin: 2rem auto;
@@ -481,7 +482,7 @@ a:hover {
 	}
 
 	.portfolio-item {
-		padding: 0.9rem;
+		padding: 0.8rem;
 		margin-bottom: 0.5rem;
 	}
 
