--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -74,14 +74,26 @@ nav {
 }
 
 .nav-menu a {
-    color: var(--text-color);
-    text-decoration: none;
-    font-weight: 500;
-    transition: color var(--transition-speed);
+	color: var(--text-color);
+	text-decoration: none;
+	font-weight: 500;
+	transition: color var(--transition-speed);
+	position: relative;
 }
 
-.nav-menu a:hover {
-    color: var(--accent-color);
+.nav-menu a::after {
+	content: '';
+	position: absolute;
+	width: 0;
+	height: 2px;
+	bottom: -4px;
+	left: 0;
+	background-color: var(--accent-color);
+	transition: width var(--transition-speed);
+}
+
+.nav-menu a:hover::after {
+	width: 100%;
 }
 
 .nav-toggle {
